# photon-quickstart

./: .gitignore  .travis.yml  Cargo.toml  README.md  elf2bin.sh  photon.json
.cargo/: config
ci/: install.sh  script.sh
examples/: blinky.rs  cloud.rs  deviceid.rs  function.rs  heartbeat.rs  led.rs  usbserial.rs  variable.rs
scripts/: run_on_photon
