[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
name = "photon-quickstart"
version = "0.1.0"

[dependencies]
particle-hal = { git = "https://github.com/japaric/particle-hal" }
photon = { git = "https://github.com/japaric/photon" }

[profile.dev]
debug = false
debug-assertions = false
lto = true
opt-level = 3

[profile.release]
lto = true