[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
name = "photon-quickstart"
version = "0.1.0"

[dependencies]
photon-hal = { git = "https://github.com/japaric/photon-hal" }
photon = { path = "../photon" }
# photon = { git = "https://github.com/japaric/photon" }

[profile.dev]
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3

[profile.release]
lto = true